# yomiageBotEx

./: .gitignore  =2.4.0  AGENTS.md  CLAUDE.md  QUICKSTART.md  README.md  README_v2.md  SETUP_WINDOWS.md  SETUP_WSL.md  SYSTEM_REDESIGN.md  TECHNICAL_SPECIFICATION.md  api_differences_report.md  bot.py  bot_simple.py  bot_v2.py  check_relay_status.py  config.yaml  config_v2.yaml  pyproject.toml  requirements-minimal.txt  requirements.txt  test_real_audio.py  test_v2.py
.serena/: project.yml
cogs/: __init__.py  admin.py  dictionary.py  message_reader.py  performance.py  recording.py  relay.py  reload.py  tts.py  user_settings.py  user_settings.py.disabled  voice.py  voice.py.backup
cogs_v2/: __init__.py  dictionary.py  recording.py  tts.py  voice.py
data/: audio_buffers.json  dictionary.json  guild_reading_settings.json  tts_config.json  user_settings.json
scripts/: reload.bat  setup_wsl.sh  start.bat  start.sh
tests/: test_audio_processor_silence_trim.py  test_dictionary_manager.py  test_dictionary_realtime_updates.py  test_hot_reload_manager.py  test_manual_recording_manager.py  test_message_reader_attachments.py  test_message_reader_echo_command.py  test_message_reader_ignore_prefixes.py  test_message_reader_queue.py  test_message_reader_reconnect.py  test_real_audio_recorder_async.py  test_real_audio_recorder_buffers.py  test_real_audio_recorder_continuous_prune.py  test_real_audio_recorder_diagnostics.py  test_real_audio_recorder_recovery.py  test_real_audio_recorder_state.py  test_real_audio_recorder_wave_sink_compat.py  test_recording_callback_manager_memory_limits.py  test_recording_callback_manager_pcm_cache.py  (+18 more)
(+35 files in other folders)
