[project]
name = "yomiage-bot-ex"
version = "0.2.0"
description = "Discord読み上げボット（Python版）"
requires-python = ">=3.9"
dependencies = [
    "discord.py[voice]>=2.3.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.8.0",
    "numpy>=1.24.0",
    "PyNaCl>=1.5.0",
    "ffmpeg-python>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]